Fixed overlap on dropdown (mostly)

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ ul {
   padding: 0;
   background-color: #333;
   position: fixed;
-  top: 0;
+  top: 10px;
   width: 100%;
 }
 
@@ -29,7 +29,9 @@ li a {
 }
 
 li a:hover {
-  background-color: #6ab587;
+  color: black;
+  /*background-color: #6ab587;*/
+  background-color: #f1f1f1;
 }
 
 .dropbtn {
@@ -45,13 +47,14 @@ li a:hover {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 100px;
+    min-width: 50px;
+    max-width: 85px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -60,12 +63,15 @@ li a:hover {
 
 .dropdown-content a:hover {
   background-color: #f1f1f1;
+  /*background-color: #6ab587;*/
+  color: black;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
     position: absolute;
-    top: 40px;
+    top: 45px;
+    background-color: #333;
 }
 
 .dropdown:hover .dropbtn {
